--- a/bot_messages/changelog.txt
+++ b/bot_messages/changelog.txt
@@ -1,43 +1,6 @@
 Notas de versão:
 
-1.1.4:
-- Suporte a mais caracteres especiais nos nomes das músicas;
-- Otimização no tempo de espera para reprodução de música;
-- Adição da sessão de ajuda (!help);
-- Adição da sessão changelog (!changelog).
-
-1.3.4:
-- Suporte a lista de reprodução continua adicionado;
-- Suporte a pular reprodução adicionado (!skip);
-- Suporte a desconectar bot adicionado (!disconnect);
-- Os bugs encontrados foram eliminados.
-
-1.4.5:
-- Atualização de segurança do Token do Discord;
-- Suporte a mais caracteres especiais.
-
-1.4.6:
-- Correções de bugs ao pesquisar áudios para reprodução.
-
-1.5.6:
-- Adição de pesquisa no Stack Overflow (!search).
-
-2.0.0:
-- Mudança na nomenclatura do código, agora tudo é objeto;
-- A pasta de cache será limpa de acordo com a quantidade de arquivos para poupar espaço;
-- Otimizações no código.
-
-2.0.3:
-- Bugs corrigidos.
-
-2.1.3:
-- Remoção do comando !disconnect.
-
-2.2.3:
-- Adicionada a funcionalidade que permite gerar números aleatórios se necessário.
-
-2.2.4:
-- Suporte a outras extensões de arquivos de download feito do youtube.
-
-2.3.4:
-- Agora é possível ver as músicas que serão exibidas a seguir (!next).
+1.0.0:
+- Suporte para reprodução de músicas ainda experimental;
+- Novos comandos de reprodução;
+- Melhor desempenho para reprodução de música;
